# ParNMPC

./: LICENSE  README.md
CSTR/: ParNMPC.m  ParNMPC_Def.m  ParNMPC_Init.m  initialSolution.mat
CSTR/Functions/: Func_Define_Var.m  Func_Define_fSim.m  Func_GetTime.m  Func_dKKT_FD.m
DoubleInvertedPendulum/: GEN_initData.mat  NMPC_Problem_Formulation.m  ParNMPC_Def.m  Plot_KS_function.m  Simu_Matlab.m  Simu_Matlab_Codegen.m  Simu_Simulink.slx  Simu_Simulink_Setup.m  initialSolution.mat
DoubleInvertedPendulum/Functions/: Func_Define_Jacobian.m  Func_Define_KKT.m  Func_Define_VarSim.m  Func_Hxx_FD.m  Func_InitNMPC.m  Func_PlotInitSolution.m
DoubleInvertedPendulum_TerminalConstraints/: NMPC_Problem_Formulation.m  Simu_Matlab.m  Simu_Matlab_Codegen.m  Simu_Simulink.slx  Simu_Simulink_Setup.m
Helicopter/: Deploy_Simulink_R2015b.slx  NMPC_Problem_Formulation.m  Simulink_Setup.m  Timer.m  setup_heli_3d_configuration.m  setup_lab_heli_3d.m
ParNMPC/: F_Fu_Fx.m  KKT_error_func.m  NMPCSolveOptions.m  NMPC_Iter.m  NMPC_Iter_CodeGen.m  NMPC_KKTError.m  NMPC_LineSearch_Filter.m  NMPC_LineSearch_Filter_PairEval.m  NMPC_LineSearch_Merit.m  NMPC_LineSearch_Merit_MeritEval.m  NMPC_Solve.m  NMPC_SolveOffline.asv  NMPC_SolveOffline.m  NMPC_Solve_CodeGen.m  NMPC_Solve_SearchDirection.m  OCP_Auu.m  OCP_Auu_Aux_Axx_Condensed.m  OCP_Aux.m  OCP_Axx.m  OCP_C.m  OCP_C_Cu_Cx.m  OCP_F.m  OCP_F_Fu_Fx.m  OCP_G.m  OCP_KKTs.m  OCP_L.m  OCP_LB.m  OCP_LB_LBu_LBx.m  OCP_LBuu_LBux_LBxx_Estimate.m  OCP_L_Lu_Lx.m  RT_NMPC_Solve_CodeGen.m  SIM_Plant_RK4.m  checkFeasibility.m  checkOptions.m  coarse_update_func.m  createOptions.m  createOutput.m  createRTOptions.m  createSolution.m  fmincon_Eq.m  (+4 more)
ParNMPC/@DynamicSystem/: DynamicSystem.m  SIM_GEN_f_FuncGen.m  codeGen.m  enableM.m  setInputName.m  setM.m  setParameterName.m  setStateName.m  setf.m  showInfo.m
ParNMPC/@NMPCSolver/: NMPCSolver.m  codeGen.m  getSolverMode.m  setDescentRegularization.m  setHessianApproximation.m  setInvFxMethod.m  setNonsingularRegularization.m  showInfo.m
ParNMPC/@OCPSolver/: OCPSolve.m  OCPSolver.m  getCost.m  getLAMBDA.m  initFromMatFile.m  initFromStartEnd.m
ParNMPC/@OptimalControlProblem/: OCP_GEN_C_Cu_Cx_FuncGen.m  OCP_GEN_C_FuncGen.m  OCP_GEN_fdt_FuncGen.m  OCP_GEN_fdt_fudt_fxdt_FuncGen.m  OptimalControlProblem.m  codeGen.asv  codeGen.m  createNonemptySolution_FuncGen.m  setC.m  setDiscretizationMethod.m  setG.m  setL.m  setLowerBound.m  setM.m  setT.m  setUpperBound.m  setf.m  showInfo.m
ParNMPC/PreemptRTNMPC/: CMakeLists.txt  examplemain.c  nmpc.c  nmpc.h  nmpcthreads.c  nmpcthreads.h  nmpctools.c  nmpctools.h
ParNMPC/Wrapper/: C_Cu_Cx_Wrapper.m  C_Wrapper.m  fSim_Wrapper.m  f_Wrapper.m  f_fu_fx_Wrapper.m
Quadrotor/: GEN_initData.mat  GEN_log_rec.mat  NMPC_Problem_Formulation.m  ParNMPC.m  ParNMPC_Def.m  ParNMPC_Init.m  RT_Codegen.m  Simu_Matlab.m  Simu_Matlab_Codegen.m  Simu_Matlab_test.m  Simu_Simulink.slx  Simu_Simulink_Setup.m  initialSolution.mat  test.m
Quadrotor/Functions/: Func_InitSolution.m  Func_KKTs.m  Func_Log2File.m
RobotManipulator/: CMakeLists.txt  NMPC_Problem_Formulation.m  README.md  Simu_Matlab.m  Simu_Matlab_Codegen.m  fSim_Wrapper.m  f_Wrapper.m  f_fu_fx_Wrapper.m
RobotManipulator/iiwa_description/: iiwa14.urdf
RobotManipulator/iiwa_pinocchio/: iiwa.cpp  iiwa14.h
RobotManipulator/kuka_iiwa14_pinocchio/: iiwa.cpp  tmwtypes.h
SemiActiveDamper/: GEN_initData.mat  NMPC_Problem_Formulation.m  ParNMPC_Def.m  ParNMPC_Init.m  Simu_Matlab.m  Simu_Matlab_Codegen.m  Simu_Simulink.slx  Simu_Simulink_Setup.m  initialSolution.mat
SemiActiveDamper/Functions/: FuncPlantSim.m
Vehicle/: NMPC_Problem_Formulation.m  Simu_Matlab.m  Simu_Matlab_Codegen.m  Simu_Simulink.slx  Simu_Simulink_Setup.m  circle.m  plot_res.m
docs/: 404.html  index.html  mkdocs.yml  sitemap.xml
docs/about/: index.html
docs/exp_damper/: index.html
docs/exp_double_pendulum/: index.html
docs/exp_heli/: index.html
docs/exp_quadrotor/: index.html
docs/exp_single_pendulum/: index.html
docs/exp_vehicle/: index.html
(+196 files in other folders)
